P3/ejudge_contests/01/var/archive/xmlreports/0/0/1/000040
Content-type: text/xml

<?xml version="1.0" encoding="utf-8"?>
<testing-report run-id="40" judge-id="1" status="CE" scoring="ACM" run-tests="0" contest-id="301" compile-error="yes" >
  <uuid>80a9ae10-bdaf-4da4-b0cb-6b42fb0441e2</uuid>
  <compiler_output>000040.cpp:3:3: error: invalid preprocessing directive #Visual
 # Visual Studio 2013
   ^~~~~~
000040.cpp:4:23: error: too many decimal points in number
 VisualStudioVersion = 12.0.21005.1
                       ^~~~~~~~~~~~
000040.cpp:5:30: error: too many decimal points in number
 MinimumVisualStudioVersion = 10.0.40219.1
                              ^~~~~~~~~~~~
000040.cpp:2:1: error: 'Microsoft' does not name a type
 Microsoft Visual Studio Solution File, Format Version 12.00
 ^~~~~~~~~
000040.cpp:14:41: error: expected unqualified-id before '.' token
   {E0178453-8DC4-42E4-8E3B-E14BCE288416}.Debug|Win32.ActiveCfg = Debug|Win32
                                         ^
000040.cpp:15:41: error: expected unqualified-id before '.' token
   {E0178453-8DC4-42E4-8E3B-E14BCE288416}.Debug|Win32.Build.0 = Debug|Win32
                                         ^
000040.cpp:16:41: error: expected unqualified-id before '.' token
   {E0178453-8DC4-42E4-8E3B-E14BCE288416}.Release|Win32.ActiveCfg = Release|Win32
                                         ^
000040.cpp:17:41: error: expected unqualified-id before '.' token
   {E0178453-8DC4-42E4-8E3B-E14BCE288416}.Release|Win32.Build.0 = Release|Win32
                                         ^
</compiler_output>
</testing-report>
